feature: 完善日志模块